--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,39 +1,76 @@
 .home {
-    display: flex;
-    background-color: rgb(173, 203, 240);
-  }
+  display: flex;
+  background-color: rgb(158, 184, 215);
+}
 
 
 .ProductContainer {
-    display: flex;
-    width: 78%;
-    padding: 20px;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
+  display: flex;
+  width: 78%;
+  padding: 20px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
 
-  .filters {
-    background-color: #343a40;
-    color: white;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    width: 20%;
-    margin: 10px;
-    height: 86vh;
-  }
+.filters {
+  background-color: #343a40;
+  color: white;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  margin: 10px;
+  height: 86vh;
+}
+
+.filters>span {
+  padding-bottom: 20px;
+}
+
+.products {
+  width: 30%;
+  margin: 10px;
+  border-radius: 40%;
+}
+
+.cart {
+  background-color: rgb(173, 203, 240);
+  height: 50em;
+
+}
+.thanks{
+  margin: auto;
+  width: 50%;
+  margin-left: 22em;
+  padding: 10px;
+  margin-top: 10em;
+  align-content: center;
+  font-weight: 500;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: larger;
+}
+.keep-shopping{
+  margin: auto;
+  width: 50%;
+  margin-left: 34em;
+  padding: 10px;
+  margin-top: 5em;
+  align-content: center;
+}
+.brand{
+  color: rgb(6, 6, 5);
+}
+.cart-icon{
+  margin-left: 45em;
+}
+.thank-you{
+  background-color:#c2cad2;
+  height: 40em;
   
-  .filters > span {
-    padding-bottom: 20px;
-  }
+}
 
-  .products {
-    width: 30%;
-    margin: 10px;
-  }
-
-.cart{
-    background-color:  rgb(173, 203, 240);
-    height: 50em;
-    
+.image{
+  border-radius: 20%;
+  width: 3em;
+  margin-right: 0.5em;
 }
