--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,6 +1,7 @@
 .home {
   display: flex;
-  background-color: rgb(158, 184, 215);
+  /* background-color: rgb(158, 184, 215); */
+  background-image: url(backgroundpic.jpg);
 }
 
 
