--- a/src/components/LoginForm.css
+++ b/src/components/LoginForm.css
@@ -7,7 +7,7 @@
     gap: 20px;
     height: 100vh;
     font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-    background-color: #f8f9fd;
+    background-image: url(bg.jpg);
   }
   
   input[type="text"],
@@ -61,3 +61,4 @@
     gap: 8px;
     margin: 10px;
   }
+  
